--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -52,9 +52,14 @@
         "deleteBtn": "ลบ"
     },
     "swap": {
-        "title": "แลกเปลี่ยนเหรียญ",
-        "currentBalance": "ยอดเหรียญปัจจุบัน",
-        "swapAmount": "จำนวนที่ต้องการแลก",
-        "swap": "แลกเปลี่ยน"
+        "title": "แลกข้อคำถาม (Stars) ด้วย Coins",
+        "currentBalance": "คุณมี",
+        "swap": "แลก",
+        "swapSuccessMsg": "แลกเหรียญสำเร็จ",
+        "swapErrorMsg": "เกิดข้อผิดพลาด กรุณาลองใหม่อีกครั้ง",
+        "from": "จาก",
+        "to": "เป็น",
+        "max": "จำนวนสูงสุด",
+        "rate": "อัตราแลกเปลี่ยน"
     }
 }
