--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -61,5 +61,16 @@
         "to": "เป็น",
         "max": "จำนวนสูงสุด",
         "rate": "อัตราแลกเปลี่ยน"
+    },
+    "answer": {
+        "waiting": "รอสักครู่",
+        "noAnswer": "ไม่พบ answerId",
+        "back": "กลับไปอ่านต่อ",
+        "deleting": "กำลังลบ..",
+        "deleteBtn": "ลบ",
+        "cards": "🎴 ไพ่ที่หยิบได้",
+        "prediction": "🪄 คำทำนาย",
+        "final": "💚 สรุป",
+        "suggest": "🤟 แนะนำคำถาม"
     }
 }
