impl: question link to input completed, sperate document file move in to docs folder

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -71,6 +71,7 @@
         "cards": "🎴 Cards drawn",
         "prediction": "🪄 Prediction",
         "final": "💚 Summary",
-        "suggest": "🤟 Suggested questions"
+        "suggest": "🤟 Suggested questions",
+        "cardLoading": "loading.."
     }
 }
