--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -71,6 +71,7 @@
         "cards": "🎴 ไพ่ที่หยิบได้",
         "prediction": "🪄 คำทำนาย",
         "final": "💚 สรุป",
-        "suggest": "🤟 แนะนำคำถาม"
+        "suggest": "🤟 แนะนำคำถาม",
+        "cardLoading": "กำลังโหลดไพ.."
     }
 }
