--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -72,6 +72,7 @@
         "prediction": "🪄 คำทำนาย",
         "final": "💚 สรุป",
         "suggest": "🤟 แนะนำคำถาม",
-        "cardLoading": "กำลังโหลดไพ.."
+        "cardLoading": "กำลังโหลดไพ..",
+        "suggest_note": "คลิกที่คำถามที่คุณต้องการถามต่อได้เลย"
     }
 }
